To commit today

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <div class="box">
-            <h1>Поздравляю!</h1>
+            <h1>Чумак Николай</h1>
             <p>
                 Вы только что успешно склонировали Git репозиторий с сервера на
                 жесткий диск своего компьютера.
