--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <h1>Чумак Николай</h1>
             <p>
                 Вы только что успешно склонировали Git репозиторий с сервера на
-                жесткий диск своего компьютера. Писька олололол
+                жесткий диск своего компьютера. Писька
                 !!!!!!
             </p>
         </div>
