--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
             <h1>Чумак Николай</h1>
             <p>
                 Вы только что успешно склонировали Git репозиторий с сервера на
-                жесткий диск своего компьютера. Писька
-                !!!!!!
+                жесткий диск своего компьютера. Hello World
             </p>
         </div>
     </body>
